- Layout bugs Fixed.

--- a/web/resources/css/style.css
+++ b/web/resources/css/style.css
@@ -113,7 +113,7 @@ html, body {
 
     width: calc(100% - 250px);
     background-color: rgb(18, 18, 18);
-    height: 535px;
+    height: 100%;
     float: left;
     padding: 15px 50px;
     overflow-y: auto;
@@ -147,8 +147,8 @@ html, body {
 
     cursor: pointer;
     width: 10%;
-    margin-top: 5px;
-    margin-right: 1%;
+    margin-top: 15px;
+    margin-right: 15px;
     background-color: #282828;
     border-radius: 8px;
     padding: 10px;
